<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textColorHint="@color/colorBorder"
        android:textSize="12dp"
        android:inputType="text"
        android:background="@drawable/brown_border"
        android:maxLines="1"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/colorBlack"
        android:padding="12dp"/>

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:textColorHint="@color/colorBorder"
        android:layout_marginTop="24dp"
        android:textSize="12dp"
        android:inputType="number"
        android:background="@drawable/brown_border"
        android:maxLines="1"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/colorBlack"
        android:padding="12dp"/>
    <EditText
        android:id="@+id/et_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:textColorHint="@color/colorBorder"
        android:layout_marginTop="24dp"
        android:textSize="12dp"
        android:inputType="text"
        android:background="@drawable/brown_border"
        android:maxLines="1"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/colorBlack"
        android:padding="12dp"/>
    <EditText
        android:id="@+id/et_lat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lattitute"
        android:textColorHint="@color/colorBorder"
        android:layout_marginTop="24dp"
        android:textSize="12dp"
        android:inputType="number"
        android:background="@drawable/brown_border"
        android:maxLines="1"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/colorBlack"
        android:padding="12dp"/>
    <EditText
        android:id="@+id/et_lg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/longtitue"
        android:textColorHint="@color/colorBorder"
        android:layout_marginTop="24dp"
        android:textSize="12dp"
        android:inputType="number"
        android:background="@drawable/brown_border"
        android:maxLines="1"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/colorBlack"
        android:padding="12dp"/>
    <Spinner
        android:id="@+id/sp_township"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/township"
        android:textColorHint="@color/colorBorder"
        android:layout_marginTop="24dp"
        android:textSize="12dp"
        android:maxLines="1"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/colorBlack"
        android:padding="12dp"
        android:entries="@array/township">
    </Spinner>
</LinearLayout>